flagger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-foundations
  namespace: flagger-exercise
  labels:
    app: gitops-foundations
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-foundations-service
                port:
                  number: 80
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /
#          - backend:
#              service:
#                name: gitops-foundations-service
#                port:
#                  number: 80
# host: davescreen.westus2.cloudapp.azure.com
